--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     </nav-->
 
     <h1 id="pixels-text" class="pixels-text">0px</h1>
+    <br><br>
+    <div class="container" id="container">
+        <div class="section">Lorem.</div>
+        <div class="section">Praesentium!</div>
+        <div class="section">Dolore.</div>
+        <div class="section">Reprehenderit!</div>
+        <div class="section">Voluptas.</div>
+    </div>
 
     <script text="text/javascript" src="app.js" ></script>
 </body>
