--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
     <h1 id="pixels-text" class="pixels-text">0px</h1>
     <br><br>
     <div class="container" id="container">
-        <div class="section">Lorem.</div>
-        <div class="section">Praesentium!</div>
-        <div class="section">Dolore.</div>
-        <div class="section">Reprehenderit!</div>
-        <div class="section">Voluptas.</div>
+
+        <div class="options-container" id="options-container">
+                <div class="section">Lorem.</div>
+                <div class="section">Praesentium!</div>
+                <div class="section">Dolore.</div>
+                <div class="section">Reprehenderit!</div>
+                <div class="section">Voluptas.</div>
+        </div>
+
+        <div class="section-container" id="section-container">
+            <div class="section1" id="section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolor quos dolore. Eius debitis, officiis necessitatibus perspiciatis nisi quisquam consequatur quaerat, eum at temporibus enim odit placeat! Neque, odio omnis.
+            </div>
+            <div class="section2" id="section2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolor quos dolore. Eius debitis, officiis necessitatibus perspiciatis nisi quisquam consequatur quaerat, eum at temporibus enim odit placeat! Neque, odio omnis.
+            </div>
+        </div>
+    
     </div>
 
     <script text="text/javascript" src="app.js" ></script>
